Add solution for "Left Rotation".

--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="practice\data_structures\arrays\dynamic_array.cpp">
       <Filter>Source Files\practice\data_structures\arrays</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\arrays\left_rotation.cpp">
+      <Filter>Source Files\practice\data_structures\arrays</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
