--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="practice\data_structures\arrays\2d_arrays_ds.cpp" />
     <ClCompile Include="practice\data_structures\arrays\arrays_ds.cpp" />
     <ClCompile Include="practice\data_structures\arrays\dynamic_array.cpp" />
+    <ClCompile Include="practice\data_structures\arrays\left_rotation.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\find_the_point.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
