Add solution for "Sparce Arrays".

--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="practice\data_structures\arrays\left_rotation.cpp">
       <Filter>Source Files\practice\data_structures\arrays</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\arrays\sparce_arrays.cpp">
+      <Filter>Source Files\practice\data_structures\arrays</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
