--- a/google/distributed_code_jam/distributed_code_jam.vcxproj
+++ b/google/distributed_code_jam/distributed_code_jam.vcxproj
@@ -129,11 +129,13 @@
   <ItemGroup>
     <ClInclude Include="2018\practice\baby_blocks.h" />
     <ClInclude Include="2018\practice\flagpoles.h" />
+    <ClInclude Include="2018\practice\pancakes.h" />
     <ClInclude Include="message.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="2018\practice\baby_blocks.cpp" />
     <ClCompile Include="2018\practice\flagpoles.cpp" />
+    <ClCompile Include="2018\practice\pancakes.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="message_fake.cpp" />
   </ItemGroup>
