--- a/google/code_jam/code_jam.vcxproj.filters
+++ b/google/code_jam/code_jam.vcxproj.filters
@@ -16,13 +16,16 @@
     <Filter Include="Source Files\2018">
       <UniqueIdentifier>{36766097-48b8-48c0-b726-19dba6add284}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\2018\PS">
+    <Filter Include="Source Files\2018\ps">
       <UniqueIdentifier>{220cf7a1-e7b8-476d-9b37-0f211bdd889f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="2018\PS\number_guessing.cpp">
+      <Filter>Source Files\2018\ps</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
