--- a/google/code_jam/code_jam.vcxproj
+++ b/google/code_jam/code_jam.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="2018\PS\number_guessing.cpp" />
     <ClCompile Include="2018\ps\senate_evacuation.cpp" />
+    <ClCompile Include="2018\ps\steed_2_cruise_control.cpp" />
     <ClCompile Include="2018\r3\field_trip.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
