--- a/google/code_jam/code_jam.vcxproj.filters
+++ b/google/code_jam/code_jam.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="2018\ps\steed_2_cruise_control.cpp">
       <Filter>Source Files\2018\ps</Filter>
     </ClCompile>
+    <ClCompile Include="2018\ps\bathroom_stalls.cpp">
+      <Filter>Source Files\2018\ps</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
