--- a/google/code_jam/code_jam.vcxproj
+++ b/google/code_jam/code_jam.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="2018\ps\senate_evacuation.cpp" />
     <ClCompile Include="2018\ps\steed_2_cruise_control.cpp" />
     <ClCompile Include="2018\qr\saving_the_universe_again.cpp" />
+    <ClCompile Include="2018\qr\trouble_sort.cpp" />
     <ClCompile Include="2018\r3\field_trip.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
