--- a/google/code_jam/code_jam.vcxproj.filters
+++ b/google/code_jam/code_jam.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="2018\qr\trouble_sort.cpp">
       <Filter>Source Files\2018\qr</Filter>
     </ClCompile>
+    <ClCompile Include="2018\qr\go_gopher.cpp">
+      <Filter>Source Files\2018\qr</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
