--- a/google/code_jam/code_jam.vcxproj
+++ b/google/code_jam/code_jam.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="2018\PS\number_guessing.cpp" />
     <ClCompile Include="2018\ps\senate_evacuation.cpp" />
     <ClCompile Include="2018\ps\steed_2_cruise_control.cpp" />
+    <ClCompile Include="2018\qr\cubic_ufo.cpp" />
     <ClCompile Include="2018\qr\go_gopher.cpp" />
     <ClCompile Include="2018\qr\saving_the_universe_again.cpp" />
     <ClCompile Include="2018\qr\trouble_sort.cpp" />
