Add solution for "Waffle Choppers" problem.

--- a/google/code_jam/code_jam.vcxproj
+++ b/google/code_jam/code_jam.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="2018\qr\go_gopher.cpp" />
     <ClCompile Include="2018\qr\saving_the_universe_again.cpp" />
     <ClCompile Include="2018\qr\trouble_sort.cpp" />
+    <ClCompile Include="2018\r1a\waffle_choppers.cpp" />
     <ClCompile Include="2018\r3\field_trip.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
