--- a/google/code_jam/code_jam.vcxproj.filters
+++ b/google/code_jam/code_jam.vcxproj.filters
@@ -66,5 +66,8 @@
     <ClCompile Include="2018\r1a\big_party.cpp">
       <Filter>Source Files\2018\r1a</Filter>
     </ClCompile>
+    <ClCompile Include="2018\r1a\edgy_baking.cpp">
+      <Filter>Source Files\2018\r1a</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
