--- a/google/code_jam/code_jam.vcxproj.filters
+++ b/google/code_jam/code_jam.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Source Files\2018\r1a">
       <UniqueIdentifier>{e331a9ff-9042-4c02-9774-25dd40435c9a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\2018\r1b">
+      <UniqueIdentifier>{921c4b59-4102-4837-bedf-114bbf50f74d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -68,6 +71,9 @@
     </ClCompile>
     <ClCompile Include="2018\r1a\edgy_baking.cpp">
       <Filter>Source Files\2018\r1a</Filter>
+    </ClCompile>
+    <ClCompile Include="2018\r1b\rounding_error.cpp">
+      <Filter>Source Files\2018\r1b</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
