--- a/google/code_jam/code_jam.vcxproj
+++ b/google/code_jam/code_jam.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="2018\r1a\big_party.cpp" />
     <ClCompile Include="2018\r1a\edgy_baking.cpp" />
     <ClCompile Include="2018\r1a\waffle_choppers.cpp" />
+    <ClCompile Include="2018\r1b\mysterious_road_signs_slow.cpp" />
     <ClCompile Include="2018\r1b\rounding_error.cpp" />
     <ClCompile Include="2018\r1b\transmutation.cpp" />
     <ClCompile Include="2018\r3\field_trip.cpp" />
