--- a/google/code_jam/code_jam.vcxproj.filters
+++ b/google/code_jam/code_jam.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClCompile Include="2018\r1b\transmutation.cpp">
       <Filter>Source Files\2018\r1b</Filter>
     </ClCompile>
+    <ClCompile Include="2018\r1b\mysterious_road_signs_slow.cpp">
+      <Filter>Source Files\2018\r1b</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
