--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="practice\data_structures\trees\tree_coordinates.cpp">
       <Filter>Source Files\practice\data_structures\trees</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp">
+      <Filter>Source Files\practice\data_structures\trees</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
