--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -66,5 +66,8 @@
     <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp">
       <Filter>Source Files\practice\data_structures\trees</Filter>
     </ClCompile>
+    <ClCompile Include="practice\mathematics\fundamentals\maximum_draws.cpp">
+      <Filter>Source Files\practice\mathematics\fundamentals</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
