--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="practice\mathematics\fundamentals\find_the_point.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\handshake.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\maximum_draws.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\minimum_height_triangle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
