Add solution for "Connecting Towns" problem.

--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="practice\data_structures\trees\swap_nodes_algo.cpp" />
     <ClCompile Include="practice\data_structures\trees\tree_coordinates.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\army_game.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\connecting_towns.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\find_the_point.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\handshake.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\leonardos_prime_factors.cpp" />
