--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="practice\data_structures\trees\swap_nodes_algo.cpp" />
     <ClCompile Include="practice\data_structures\trees\tree_coordinates.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\army_game.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\best_divisor.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\connecting_towns.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\cutting_paper_squares.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\find_the_point.cpp" />
