--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -96,5 +96,8 @@
     <ClCompile Include="practice\mathematics\fundamentals\best_divisor.cpp">
       <Filter>Source Files\practice\mathematics\fundamentals</Filter>
     </ClCompile>
+    <ClCompile Include="practice\mathematics\fundamentals\restaurant.cpp">
+      <Filter>Source Files\practice\mathematics\fundamentals</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
