--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="practice\mathematics\fundamentals\sherlock_and_divisors.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\sherlock_and_moving_tiles.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\sherlock_and_permutations.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\special_multiple.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\strange_grid_again.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\summing_the_n_series.cpp" />
   </ItemGroup>
