--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="practice\mathematics\fundamentals\best_divisor.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\connecting_towns.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\cutting_paper_squares.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\die_hard_3.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\diwali_lights.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\even_odd_query.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\find_the_point.cpp" />
