--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="practice\mathematics\fundamentals\diwali_lights.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\even_odd_query.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\find_the_point.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\halloween_party.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\handshake.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\leonardos_prime_factors.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\matrix_tracing.cpp" />
