Add solution for "K Candy Store" problem.

--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -135,5 +135,8 @@
     <ClCompile Include="practice\mathematics\fundamentals\is_fibo.cpp">
       <Filter>Source Files\practice\mathematics\fundamentals</Filter>
     </ClCompile>
+    <ClCompile Include="practice\mathematics\fundamentals\k_candy_store.cpp">
+      <Filter>Source Files\practice\mathematics\fundamentals</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
