--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="practice\mathematics\fundamentals\halloween_party.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\handshake.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\is_fibo.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\k_candy_store.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\leonardos_prime_factors.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\matrix_tracing.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\maximum_draws.cpp" />
