--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="practice\mathematics\fundamentals\sherlock_and_permutations.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\special_multiple.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\strange_grid_again.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\sumar_and_the_floating_rocks.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\summing_the_n_series.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
