--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="practice\mathematics\fundamentals\minimum_height_triangle.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\restaurant.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\reverse_game.cpp" />
+    <ClCompile Include="practice\mathematics\fundamentals\russian_peasant_exponentiation.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\sherlock_and_divisors.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\sherlock_and_moving_tiles.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\sherlock_and_permutations.cpp" />
