Add solution for "Jim and the Jokes" problem.

--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -150,5 +150,8 @@
     <ClCompile Include="practice\mathematics\fundamentals\most_distant.cpp">
       <Filter>Source Files\practice\mathematics\fundamentals</Filter>
     </ClCompile>
+    <ClCompile Include="practice\mathematics\fundamentals\jim_and_the_jokes.cpp">
+      <Filter>Source Files\practice\mathematics\fundamentals</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
