--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="practice\data_structures\arrays\left_rotation.cpp" />
     <ClCompile Include="practice\data_structures\arrays\sparce_arrays.cpp" />
     <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp" />
+    <ClCompile Include="practice\data_structures\trees\kittys_calculations_on_a_tree.cpp" />
     <ClCompile Include="practice\data_structures\trees\swap_nodes_algo.cpp" />
     <ClCompile Include="practice\data_structures\trees\tree_coordinates.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\army_game.cpp" />
