--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -159,5 +159,8 @@
     <ClCompile Include="practice\mathematics\fundamentals\mutual_recurrences.cpp">
       <Filter>Source Files\practice\mathematics\fundamentals</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\trees\kittys_calculations_on_a_tree.cpp">
+      <Filter>Source Files\practice\data_structures\trees</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
