--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="practice\data_structures\arrays\dynamic_array.cpp" />
     <ClCompile Include="practice\data_structures\arrays\left_rotation.cpp" />
     <ClCompile Include="practice\data_structures\arrays\sparce_arrays.cpp" />
+    <ClCompile Include="practice\data_structures\balanced_trees\array_and_simple_queries_splay.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\array_and_simple_queries_treap.cpp" />
     <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp" />
     <ClCompile Include="practice\data_structures\trees\jennys_subtrees.cpp" />
@@ -176,6 +177,9 @@
     <ClCompile Include="practice\mathematics\fundamentals\strange_grid_again.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\sumar_and_the_floating_rocks.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\summing_the_n_series.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
