--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="practice\data_structures\arrays\sparce_arrays.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\array_and_simple_queries_splay.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\array_and_simple_queries_treap.cpp" />
+    <ClCompile Include="practice\data_structures\balanced_trees\median_updates_treap.cpp" />
     <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp" />
     <ClCompile Include="practice\data_structures\trees\jennys_subtrees.cpp" />
     <ClCompile Include="practice\data_structures\trees\kittys_calculations_on_a_tree.cpp" />
