--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upf_treap.cpp">
       <Filter>Source Files\practice\data_structures\balanced_trees</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upf_scapegoat.cpp">
+      <Filter>Source Files\practice\data_structures\balanced_trees</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
