--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upt_scapegoat.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upt_splay.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upt_treap.cpp" />
+    <ClCompile Include="practice\data_structures\stacks\maximum_element.cpp" />
     <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp" />
     <ClCompile Include="practice\data_structures\trees\jennys_subtrees.cpp" />
     <ClCompile Include="practice\data_structures\trees\kittys_calculations_on_a_tree.cpp" />
