--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upt_treap.cpp" />
     <ClCompile Include="practice\data_structures\stacks\balanced_brackets.cpp" />
     <ClCompile Include="practice\data_structures\stacks\equal_stacks.cpp" />
+    <ClCompile Include="practice\data_structures\stacks\largest_rectangle.cpp" />
     <ClCompile Include="practice\data_structures\stacks\maximum_element.cpp" />
     <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp" />
     <ClCompile Include="practice\data_structures\trees\jennys_subtrees.cpp" />
