--- a/google/distributed_code_jam/distributed_code_jam.vcxproj.filters
+++ b/google/distributed_code_jam/distributed_code_jam.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="2018\r1\kenneth.h">
       <Filter>Source Files\2018\r1</Filter>
     </ClInclude>
+    <ClInclude Include="2018\practice\broken_memory.h">
+      <Filter>Source Files\2018\practice</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -88,6 +91,9 @@
     </ClCompile>
     <ClCompile Include="2018\r1\kenneth.cpp">
       <Filter>Source Files\2018\r1</Filter>
+    </ClCompile>
+    <ClCompile Include="2018\practice\broken_memory.cpp">
+      <Filter>Source Files\2018\practice</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
